310 ==> 436795 - Database from uninstalled version of digiKam is unhelpfully persistant.
311 ==> 424679 - Windows installer erroneously requires accepting the GPL.
312 ==> 436532 - digiKam translation of "Behavior" not possible.
313 ==> 403267 - digiKam is not reading tags from DNG images when sidecars are present.
314 ==> 437072 - digiKam does not start.
315 ==> 426791 - Unable to change database location via GUI.
316 ==> 437175 - Use media file timestamp when creating sidecar.
317 ==> 437103 - BadRequest when exporting to Onedrive.
318 ==> 437209 - Menu bar and toolbar backgrounds don't respect selected digiKam colorscheme (and instead inherit from global colorscheme).
319 ==> 431689 - Nokia 9 PureView DNG image demosaicing preview corruption.
320 ==> 437461 - Tag panel from left side-bar has people items unsorted.
321 ==> 252763 - Align album titles next to album thumbnails.
322 ==> 436671 - Similarity-Duplicates the active menu tab always moves to the first tab, no location memory.
323 ==> 437534 - Grouped items are not visible in the Table view when the View / Show All Grouped Items As Open menu is selected.
324 ==> 377632 - Problem with open grouped files.
325 ==> 437548 - In Table view Del removes Group Selected and second item to the trash.
326 ==> 431497 - Unconfiremd Faces Counter has an Offset.
327 ==> 437554 - Export to local Storage : Add an export with direct extension of the files in jpg (Not jpeg).
328 ==> 436695 - [opensuse 15.2] unable to resize images (all types).
329 ==> 427403 - Export multiple albums - Exported folder structure shall represent album structure.
330 ==> 436120 - [Suggestion] Keep the tree structure in "Export to a local device".
331 ==> 437655 - Store fuzzy search without a name.
332 ==> 437680 - Crash if Geolocation editor is closed while coordinates are still being updated.
333 ==> 437682 - Strange activity - If a year (2007) with date subdirectories is selected from the Album.
334 ==> 