@@ -354,4 +354,5 @@ BUGFIXES:
 331 ==> 437655 - Store fuzzy search without a name.
 332 ==> 437680 - Crash if Geolocation editor is closed while coordinates are still being updated.
 333 ==> 437682 - Strange activity - If a year (2007) with date subdirectories is selected from the Album.
-334 ==> 
+334 ==> 437708 - Face tag spanning entire image added for photos taken with Windows Phone.
+335 ==> 
